<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicio_prof_coordenador"
            android:icon="@drawable/ic_action_inicio"
            android:title="@string/Inicio" />
        <item
            android:id="@+id/grupos_tccs_prof_coordenador"
            android:icon="@drawable/ic_action_banca"
            android:title="@string/grupos_tccs" />
        <item
            android:id="@+id/turmas_prof_coordenador"
            android:icon="@drawable/ic_action_banca"
            android:title="@string/nome_turma" />
        <item
            android:id="@+id/matricular_aluno_prof_coordenador"
            android:icon="@drawable/ic_action_matricula"
            android:title="@string/matricular_aluno" />
        <item
            android:id="@+id/calendario_prof_coordenador"
            android:icon="@drawable/ic_action_calendario"
            android:title="@string/calendario" />
        <item
            android:id="@+id/alerta_prof_coordenador"
            android:icon="@drawable/ic_action_notificacao"
            android:title="@string/emitir_alerta" />
    </group>

    <item android:title="Acesso">
        <menu>
            <item
                android:id="@+id/sair_sistema"
                android:icon="@drawable/ic_action_sair"
                android:title="@string/sair_do_sistema" />
            <item
                android:id="@+id/sobre"
                android:icon="@drawable/ic_action_sobre"
                android:title="@string/sobre_app" />
        </menu>
    </item>

</menu>
