<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicio"
            android:icon="@drawable/ic_action_inicio"
            android:title="@string/Inicio" />
        <item
            android:id="@+id/matricular_aluno"
            android:icon="@drawable/ic_action_inicio"
            android:title="@string/matricular_aluno" />
        <item
            android:id="@+id/turmas"
            android:icon="@drawable/ic_action_inicio"
            android:title="@string/nome_turma" />

    </group>

    <item android:title="Acesso">
        <menu>
            <item
                android:id="@+id/sair_sistema"
                android:icon="@drawable/ic_action_sair"
                android:title="@string/sair_do_sistema" />
            <item
                android:id="@+id/sobre"
                android:icon="@drawable/ic_action_sobre"
                android:title="@string/sobre_app" />
        </menu>
    </item>

</menu>
