<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uespi.tcc.ramon.duarte.com.acompanhamentodetccs.AcessarSistema">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logonova"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_matricula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionLabel="@string/matricula"
            android:drawableLeft="@drawable/ic_action_matricula"
            android:inputType="numberSigned"
            android:hint="@string/matricula"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_senha"
            android:imeActionLabel="@string/senha"
            android:inputType="textPassword"
            android:hint="@string/senha"/>
    </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="35dp"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/bt_criar_conta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_cadastrar"/>
            <Button
                android:id="@+id/bt_entrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_entrar"/>
        </LinearLayout>
        <TextView
            android:id="@+id/esqueceu_a_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:text="@string/esqueceu_a_senha"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
