<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uespi.tcc.ramon.duarte.com.acompanhamentodetccs.CadastroMatricula">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:gravity="center_vertical">
       <LinearLayout
           android:layout_width="368dp"
           android:layout_height="wrap_content"
           android:gravity="center_vertical"
           android:orientation="vertical">
           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <EditText
                   android:id="@+id/edit_matricula"
                   android:layout_width="match_parent"
                   android:gravity="center_horizontal"
                   android:layout_height="wrap_content"
                   android:inputType="numberSigned"
                   android:drawableLeft="@drawable/ic_action_matricula"
                   android:hint="@string/matricula"
                   android:imeActionLabel="@string/matricula"/>
           </android.support.design.widget.TextInputLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:paddingTop="10dp"
               android:gravity="center"
               android:paddingStart="10dp"
               android:paddingEnd="10dp"
               >
               <Button
                   android:id="@+id/bt_cancelar_cadastro"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:paddingStart="20dp"
                   android:paddingEnd="20dp"
                   android:text="@string/bt_cancelar"/>
               <Button
                   android:id="@+id/bt_cadastrar"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:paddingStart="20dp"
                   android:paddingEnd="20dp"
                   android:text="@string/cadastrar"/>
           </LinearLayout>
       </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
