<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="uespi.tcc.ramon.duarte.com.acompanhamentodetccs.OrientadorActivity"
    tools:showIn="@layout/app_bar_orientador">

    <FrameLayout
        android:id="@+id/frame_inicio"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Inicio"/>
            <ListView
                android:id="@+id/lista_eventos_inicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>
        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_minhas_reunioes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minhas_reunioes"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_documentos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/documentos"/>

    </FrameLayout>


    <FrameLayout
        android:id="@+id/frame_calendario"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:paddingTop="20dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.github.sundeepk.compactcalendarview.CompactCalendarView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/compactcalendar_view"
                android:layout_width="fill_parent"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_height="250dp"
                app:compactCalendarDisplayOtherMonthDays="true"
                app:compactCalendarTargetHeight="250dp"
                app:compactCalendarTextSize="12sp"
                app:compactCalendarBackgroundColor="#fff"
                app:compactCalendarTextColor="#000000"
                app:compactCalendarCurrentSelectedDayBackgroundColor="#87CEEB"
                app:compactCalendarCurrentDayBackgroundColor="#B71C1C"
                app:compactCalendarMultiEventIndicatorColor="#B71C1C"
                />
            <ListView
                android:id="@+id/lista_eventos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView>

        </LinearLayout>

    </FrameLayout>



</android.support.constraint.ConstraintLayout>
